# union

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  .yamllint.yml  CMakeLists.txt  README.md  REUSE.toml  UnionConfig.cmake.in  metainfo.yaml
autotests/: CMakeLists.txt  TestColor.cpp  TestPlasmaSvg.cpp  TestSelector.cpp  TestStyle.cpp  TestStylePackage.cpp  TestStyleRegistry.cpp  TestStyleRule.cpp  TestTheme.cpp  TestThemeRegistry.cpp
autotests/TestSelectorData/: attribute.json  child.json  hints.json  simple.json  state.json  universal.json
autotests/TestStylePackageData/NoContentsStyle/: metadata.json
autotests/TestStylePackageData/UnknownInputStyle/: metadata.json
autotests/TestStylePackageData/ValidTestStyle/: metadata.json
autotests/input/: TestCss.cpp  TestPlasmaSvg.cpp
autotests/output/: TestQtQuick.qml
autotests/output/quick/: CMakeLists.txt  TestControls.cpp  TestPositionerLayout.cpp
autotests/properties/: CMakeLists.txt  CreateTestInstances.h  TestAlignmentProperty.cpp  TestAlignmentPropertyGroup.cpp  TestBackgroundProperty.cpp  TestBackgroundPropertyGroup.cpp  TestBorderProperty.cpp  TestBorderPropertyGroup.cpp  TestCornerProperty.cpp  TestCornerPropertyGroup.cpp  TestCornersProperty.cpp  TestCornersPropertyGroup.cpp  TestDisplayPropertyGroup.cpp  TestIconProperty.cpp  TestIconPropertyGroup.cpp  TestImageProperty.cpp  TestImagePropertyGroup.cpp  TestLayoutProperty.cpp  TestLayoutPropertyGroup.cpp  TestLineProperty.cpp  TestLinePropertyGroup.cpp  TestOffsetProperty.cpp  TestOffsetPropertyGroup.cpp  TestOutlineProperty.cpp  TestOutlinePropertyGroup.cpp  TestPaletteProperty.cpp  TestShadowProperty.cpp  TestShadowPropertyGroup.cpp  TestSizeProperty.cpp  TestSizePropertyGroup.cpp  TestStyleProperty.cpp  TestStylePropertyGroup.cpp  TestTextProperty.cpp  TestTextPropertyGroup.cpp
examples/gallery/: Buttons.qml  CMakeLists.txt  Calendar.qml  Checkable.qml  Delegates.qml  Dialogs.qml  Main.qml  Menus.qml  ProgressSlider.qml  SearchField.qml  SwipeView.qml  Tables.qml  Tabs.qml  Text.qml  TreeView.qml  main.cpp
examples/widgetsgallery/: CMakeLists.txt  README.md  buttonspage.cpp  buttonspage.h  checkablepage.cpp  checkablepage.h  listpage.cpp  listpage.h  main.cpp  mainwindow.cpp  mainwindow.h  numberpage.cpp  numberpage.h  textpage.cpp  textpage.h  widgetpage.cpp  widgetpage.h
src/: CMakeLists.txt  Color.cpp  Color.h  Definition.h  Element.cpp  Element.h  ElementIdentifier.cpp  ElementIdentifier.h  ElementQuery.cpp  ElementQuery.h  ElementSelector.cpp  ElementSelector.h  EventHelper.h  InputPlugin.cpp  InputPlugin.h  LruCache.h  PackageHandler.cpp  PackageHandler.h  PlatformPlugin.cpp  PlatformPlugin.h  PluginRegistry.h  PropertiesTypes.h  QDataStreamExtras.h  Selector.cpp  Selector.h  Size.cpp  Size.h  Style.cpp  Style.h  StyleCache.cpp  StyleCache_p.h  StyleElement.cpp  StyleElement.h  StyleLoader.cpp  StyleLoader.h  StylePackage.cpp  StylePackage.h  StyleRegistry.cpp  StyleRegistry.h  StyleRule.cpp  (+7 more)
src/input/: CMakeLists.txt
src/input/css/: CMakeLists.txt  CssLoader.cpp  CssLoader.h  CssPlugin.cpp  CssPlugin.h  default.css  metadata.json  metadata.json.license  properties.css  test.css  variables.css
src/input/plasmasvg/: CMakeLists.txt  GenerateDefinitionsResource.cmake  LoadingContext.cpp  LoadingContext.h  PlasmaSvgLoader.cpp  PlasmaSvgLoader.h  PlasmaSvgPlugin.cpp  PlasmaSvgPlugin.h  PlasmaSvgPlugin.qrc  PlasmaSvgRenderer.cpp  PlasmaSvgRenderer.h  PlasmaSvgStructure.yml  PropertyFunctions.cpp  PropertyFunctions.h  RYMLHelpers.h  metadata.json  metadata.json.license
src/output/: CMakeLists.txt
src/output/kirigami/: AbstractApplicationHeader.qml  AbstractCard.qml  CMakeLists.txt  Chip.qml  Heading.qml  InlineMessage.qml  NavigationTabBar.qml  NavigationTabButton.qml  OverlayDrawer.qml  PlatformTheme.cpp  PlatformTheme.h  PluginFactory.cpp  PluginFactory.h  Units.cpp  Units.h
src/output/qtquick/: AreaNode.cpp  Background.cpp  Background.h  CMakeLists.txt  CornerNode.cpp  CornerNode.h  Element.cpp  Element.h  UnionNode.cpp  UnionPlugin.cpp  UnionPlugin.h
src/output/qtwidgets/: CMakeLists.txt  Positioner.cpp  Positioner.h  StyleDrawing.cpp  StyleDrawing.h  StyleUtils.cpp  StyleUtils.h  Types.cpp  Types.h  Union.json  UnionStyle.cpp  UnionStyle.h  UnionStylePlugin.cpp  UnionStylePlugin.h  union.themerc
src/platform/: CMakeLists.txt
src/platform/frameworks/: CMakeLists.txt  KColorSchemeProvider.cpp  KColorSchemeProvider.h  kcolorscheme-metadata.json
src/platform/kcolorschemeprovider/: CMakeLists.txt  KColorSchemeProvider.cpp  KColorSchemeProvider.h  kcolorschemeprovider.json
src/platform/plasma/: CMakeLists.txt  PlasmaPlatformPlugin.cpp  PlasmaPlatformPlugin.h  metadata.json  metadata.json.license
src/platform/shared/: CMakeLists.txt  KColorSchemeProvider.cpp  KColorSchemeProvider.h
src/properties/: AlignmentProperty.cpp  AlignmentProperty.h  AlignmentPropertyGroup.cpp  AlignmentPropertyGroup.h  BackgroundProperty.cpp  BackgroundProperty.h  BackgroundPropertyGroup.cpp  BackgroundPropertyGroup.h  BorderProperty.cpp  BorderProperty.h  BorderPropertyGroup.cpp  BorderPropertyGroup.h  CMakeLists.txt  CornerProperty.cpp  CornerProperty.h  CornerPropertyGroup.cpp  CornerPropertyGroup.h  CornersProperty.cpp  CornersProperty.h  CornersPropertyGroup.cpp  CornersPropertyGroup.h  DisplayPropertyGroup.cpp  DisplayPropertyGroup.h  Formatter.h  IconProperty.cpp  IconProperty.h  IconPropertyGroup.cpp  IconPropertyGroup.h  ImageProperty.cpp  ImageProperty.h  ImagePropertyGroup.cpp  ImagePropertyGroup.h  IndicatorProperty.cpp  IndicatorProperty.h  LayoutProperty.cpp  LayoutProperty.h  LayoutPropertyGroup.cpp  LayoutPropertyGroup.h  LineProperty.cpp  LineProperty.h  (+31 more)
src/properties/autotests/: CMakeLists.txt  CreateTestInstances.h  TestBackgroundProperty.cpp  TestBorderProperty.cpp  TestCornerProperty.cpp  TestCornersProperty.cpp  TestImageProperty.cpp  TestIndicatorProperty.cpp  TestPaletteProperty.cpp  TestShadowProperty.cpp  TestSizeProperty.cpp  TestSizesProperty.cpp  TestStyleProperty.cpp  (+1 more)
tools/styletool/: CMakeLists.txt  Common.h  styletool.cpp
(+372 files in other folders)
